Thêm vài cái thư viện script

--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
@@ -9,6 +9,7 @@
   <link href="~/Content/css/datepicker3.css" rel="stylesheet">
   <link href="~/Content/css/styles.css" rel="stylesheet">
   <link href="~/Content/css/datatables.min.css" rel="stylesheet">
+  <link href="~/Content/css/sweetalert.css" rel="stylesheet">
 
   <!--Icons-->
   <script src="~/Scripts/lumino.glyphs.js"></script>
@@ -41,6 +42,7 @@
   <script src="~/Scripts/easypiechart-data.js"></script>
   <script src="~/Scripts/bootstrap-datepicker.js"></script>
   <script src="~/Scripts/datatables.min.js"></script>
+  <script src="~/Scripts/sweetalert.min.js"></script>
   @RenderSection("scripts", false)
   <script>
     $('#calendar').datepicker({
