--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
@@ -1,51 +1,54 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>@ViewBag.Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>@ViewBag.Title</title>
 
-  <link href="~/Content/bootstrap.min.css" rel="stylesheet">
-  <link href="~/Content/datepicker3.css" rel="stylesheet">
-  <link href="~/Content/styles.css" rel="stylesheet">
-  <link href="~/Content/datatables.min.css" rel="stylesheet">
-  <link href="~/Content/sweetalert.css" rel="stylesheet">
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/datepicker3.css" rel="stylesheet">
+    <link href="~/Content/styles.css" rel="stylesheet">
+    <link href="~/Content/datatables.min.css" rel="stylesheet">
+    <link href="~/Content/sweetalert.css" rel="stylesheet">
+    <link href="~/Content/AdminLTE.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/jquery-1.11.1.min.js"></script>
+    <script src="~/Scripts/sweetalert.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <!--Icons-->
+    <script src="~/Scripts/lumino.glyphs.js"></script>
 
-  <!--Icons-->
-  <script src="~/Scripts/lumino.glyphs.js"></script>
-
-  <!--[if lt IE 9]>
-    <script src="~/Scripts/html5shiv.js"></script>
-    <script src="~/Scripts/respond.min.js"></script>
-  <![endif]-->
+    <!--[if lt IE 9]>
+      <script src="~/Scripts/html5shiv.js"></script>
+      <script src="~/Scripts/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 
 <body>
-  <!--nav bar-->
-  @RenderPage("_NavbarLayout.cshtml")
-  <!-- /.nav bar-->
-  <!--sidebar-->
-  @RenderPage("_SidebarLayout.cshtml")
-  <!--/.sidebar-->
-  
-  <!--main-->
-<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-   @RenderBody()
-  </div>	<!--/.main-->
-
-  <script src="~/Scripts/jquery-1.11.1.min.js"></script>
-  <script src="~/Scripts/jquery.validate.min.js"></script>
-  <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-  <script src="~/Scripts/bootstrap.min.js"></script>
-  <script src="~/Scripts/chart.min.js"></script>
-  <script src="~/Scripts/chart-data.js"></script>
-  <script src="~/Scripts/easypiechart.js"></script>
-  <script src="~/Scripts/easypiechart-data.js"></script>
-  <script src="~/Scripts/bootstrap-datepicker.js"></script>
-  <script src="~/Scripts/datatables.min.js"></script>
-  <script src="~/Scripts/sweetalert.min.js"></script>
-  @RenderSection("scripts", false)
+    <!--nav bar-->
+    @RenderPage("_NavbarLayout.cshtml")
+    <!-- /.nav bar-->
+    <!--sidebar-->
+    @RenderPage("_SidebarLayout.cshtml")
+    <!--/.sidebar-->
+    <!--main-->
+    <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
+        @RenderBody()
+    </div>	<!--/.main-->
+    
+    
+    
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/chart.min.js"></script>
+    <script src="~/Scripts/chart-data.js"></script>
+    <script src="~/Scripts/easypiechart.js"></script>
+    <script src="~/Scripts/easypiechart-data.js"></script>
+    <script src="~/Scripts/bootstrap-datepicker.js"></script>
+    <script src="~/Scripts/datatables.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 
 </html>
