--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
@@ -1,26 +1,32 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_MasterLayout.cshtml";
+﻿@{
+  ViewBag.Title = "Index";
+  Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
 <h2>@ViewBag.Title</h2>
-
+<div id="product-form-area">
+  
+</div>
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-      <div class="panel-heading">Category List</div>
+      <div class="panel-heading">
+        Category List
+        <button class="btn btn-primary pull-right">
+          <span></span>
+        </button>
+      </div>
       <div class="panel-body table-responsive">
-        <table id="table-products"  class="table table-striped table-hover display nowrap">
+        <table id="table-products" class="table table-striped table-hover display nowrap">
           <thead>
-          <tr>
-            <th>ID</th>
-            <th>Product name</th>
-            <th>Inventory</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Options</th>
-          </tr>
+            <tr>
+              <th>ID</th>
+              <th>Product name</th>
+              <th>Inventory</th>
+              <th>Price</th>
+              <th>Description</th>
+              <th>Options</th>
+            </tr>
           </thead>
         </table>
       </div>
@@ -31,4 +37,19 @@
 @section scripts
 {
   <script src="~/Scripts/pages/product-management.js"></script>
+  <script>
+    function done() {
+      $("#product-insert-form")[0].reset();
+    }
+  </script>
 }
+
+<style>
+  #product-form-area {
+    width: 40%;
+    z-index: 2;
+    position: fixed;
+    top: 150px;
+    left: 37%;
+  }
+</style>
