--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Customer/CustomerManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Customer/CustomerManagement.cshtml
@@ -1,15 +1,7 @@
-﻿
-@{
-    ViewBag.Title = "EmployeeManagement";
-    Layout = "~/Views/Shared/_MasterLayout.cshtml";
-}
-
-<h2>EmployeeManagement</h2>
-
-@model AutoAncillariesLimited.Models.Supplier
+﻿@model AutoAncillariesLimited.Models.Customer
 
 @{
-  ViewBag.Title = "Supplier Management";
+  ViewBag.Title = "Customer Management";
   Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
@@ -22,10 +14,9 @@
         Category List
       </div>
       <div class="panel-body table-responsive">
-        <table id="table-employees" class="table table-striped table-hover display nowrap">
+        <table id="table-customers" class="table table-striped table-hover display nowrap">
           <thead>
           <tr>
-            <th>Username</th>
             <th>Name</th>
             <th>Phone</th>
             <th>Email</th>
@@ -68,5 +59,5 @@
 
 @section scripts
 {
-  <script src="~/Scripts/pages/employee-management.js"></script>
+  <script src="~/Scripts/pages/customer-management.js"></script>
 }
