--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/_ProductUpdate.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/_ProductUpdate.cshtml
@@ -7,14 +7,14 @@
       <span class="glyphicon glyphicon-remove" style="margin: 0"></span>
     </button>
   </div>
-  @using (Ajax.BeginForm("ProductUpdate", "Product", null, new AjaxOptions { HttpMethod = "post", InsertionMode = InsertionMode.Replace, UpdateTargetId = "error", OnComplete = "done" }, new { id = "product-insert-form" }))
+  @using (Ajax.BeginForm("ProductUpdate", "Product", null, new AjaxOptions { HttpMethod = "post", InsertionMode = InsertionMode.Replace, UpdateTargetId = "error", OnComplete = "done" }, new { id = "product-update-form" }))
   {
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-9">
           <div class="form-group">
             <label>Product name: </label>
-            @Html.TextBoxFor(model => model.Product.Name, new { @class = "form-control", placeholder = "Enter product name...", Name = "productName" })
+            @Html.TextBoxFor(model => model.Product.Name, new { @class = "form-control", placeholder = "Enter product name..." })
             @Html.ValidationMessageFor(model => model.Product.Name)
           </div>
           <div class="row">
@@ -71,20 +71,18 @@
       },
       "Please check your input."
     );
-    validator = $("#product-insert-form").validate({
+    validator = $("#product-update-form").validate({
       rules: {
         productName: {
           required: true,
           minlength: 6,
-          maxlength: 100,
-          regex: /^[a-zA-Z\s_-]*$/
+          maxlength: 100
         }
       },
       messages: {
         productName: {
           minlength: "Product name is too short!",
-          maxlength: "Product name is too long!",
-          regex: "Product name is invalid!"
+          maxlength: "Product name is too long!"
         }
       }
     });
