--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Employee/Profile.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Employee/Profile.cshtml
@@ -61,7 +61,7 @@
                 <div class="box-body">
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-2 control-label">Password</label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-8">
                             <input class="form-control" id="inputEmail3" name="inputPassword" placeholder="Password" type="password">
                             <input name="inputUsername" type="hidden" value="@Model.Username">
                             <div id="errorInput"></div>
@@ -102,6 +102,14 @@
     }
     span.field-validation-error {
         color: red;
+    }
+
+    label.control-label {
+        width: 165px;
+    }
+
+    div.form-profile {
+        width: 69%;
     }
 </style>
 
