--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Employee/ChangeProfile.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Employee/ChangeProfile.cshtml
@@ -14,17 +14,16 @@
                 <!--username-->
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.Username)</label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(n => n.Username, new { @class = "form-control", @readonly = "readonly" })
+                    <div class="col-sm-8 form-profile">
+                        @Html.TextBoxFor(n => n.Username, new { @class = "form-control form-profile", @readonly = "readonly" })
                         @Html.HiddenFor(n => n.Id)
                     </div>
                 </div>
-
                 <!--name-->
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.Name)</label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(n => n.Name, new { @class = "form-control" })
+                    <div class="col-sm-8 form-profile">
+                        @Html.TextBoxFor(n => n.Name, new { @class = "form-control form-profile" })
                         @Html.ValidationMessageFor(n => n.Name)
                     </div>
                 </div>
@@ -32,8 +31,8 @@
                 <!--address-->
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.Address)</label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(n => n.Address, new { @class = "form-control" })
+                    <div class="col-sm-8 form-profile">
+                        @Html.TextBoxFor(n => n.Address, new { @class = "form-control form-profile" })
                         @Html.ValidationMessageFor(n => n.Address)
                     </div>
                 </div>
@@ -41,8 +40,8 @@
                 <!--Email-->
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.Email)</label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(n => n.Email, new { @class = "form-control" })
+                    <div class="col-sm-8 form-profile">
+                        @Html.TextBoxFor(n => n.Email, new { @class = "form-control form-profile" })
                         @Html.ValidationMessageFor(n => n.Email)
                     </div>
                 </div>
@@ -50,38 +49,35 @@
                 <!--Phone-->
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.Phone)</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-8 form-profile">
                         @Html.TextBoxFor(n => n.Phone, new { @class = "form-control" })
                         @Html.ValidationMessageFor(n => n.Phone)
                     </div>
                 </div>
-                <input type="button" class="btn btn-default" id="btn_showChangePassword" value="Change Password">
-                <input type="button" class="btn btn-default" id="btn_HideChangePassword" value="Hide Change Password" style="display: none">
-            </div>
-                <div class="box-footer" style="margin-top: 0px;display: none" id="div_ChangePassword">
-                    <h4>Change Password</h4>
-                    <div class="form-group">
-                        <!--new Password-->
-                        <label for="inputEmail3" class="col-sm-2 control-label" style="width: 165px">@Html.DisplayNameFor(n => n.Password)</label>
-                        <div class="col-sm-8" style="width: 69%">
-                            @Html.PasswordFor(n => n.Password, new { @class = "form-control", @Value = Model.Password, id = "Password" })
-                            @Html.ValidationMessageFor(n => n.Password)
-                        </div>
+                
+                <!--new Password-->
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label" style="width: 165px">@Html.DisplayNameFor(n => n.Password)</label>
+                    <div class="col-sm-8 form-profile">
+                        @Html.PasswordFor(n => n.Password, new { @class = "form-control form-profile" })
+                        @Html.ValidationMessageFor(n => n.Password)
                     </div>
+                </div>
 
-                    <!--confirm password-->
-                    <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-2 control-label" style="width: 165px">@Html.DisplayNameFor(n => n.ConfirmPassword)</label>
-                        <div class="col-sm-8" style="width: 69%">
-                            @Html.PasswordFor(n => n.ConfirmPassword, new { @class = "form-control", @Value = Model.Password })
-                            @Html.ValidationMessageFor(n => n.ConfirmPassword)
-                        </div>
+                <!--confirm password-->
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">@Html.DisplayNameFor(n => n.ConfirmPassword)</label>
+                    <div class="col-sm-8 form-profile">
+                        @Html.PasswordFor(n => n.ConfirmPassword, new { @class = "form-control form-profile" })
+                        @Html.ValidationMessageFor(n => n.ConfirmPassword)
                     </div>
                 </div>
-                <div class="box-footer">
-                    <button type="button" class="btn btn-default" id="btn_cancelChangeProfile">Cancel</button>
-                    <button type="submit" class="btn btn-info pull-right">Change</button>
-                </div>
+            </div>
+
+            <div class="box-footer">
+                <button type="button" class="btn btn-default" id="btn_cancelChangeProfile">Cancel</button>
+                <button type="submit" class="btn btn-info pull-right">Change</button>
+            </div>
         }
     </div>
 </div>
