Tao cứ thêm cái gì vào là 404 cái đấy @@!

--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
@@ -24,7 +24,7 @@
             <input class="form-control" />
           </div><div class="form-group">
             <label>Kho Hang</label>
-            <input class="form-control" />
+            <select id="cmb-warehouses" class="form-control"></select>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <input id="btn-product-submit" type="submit" value="&nbsp;Save&nbsp;" class="btn btn-primary" />
+    <input id="btn-import-bill-submit" type="submit" value="&nbsp;Save&nbsp;" class="btn btn-primary" />
   </div>
 </div>
 <!--/input-form-->
