--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
@@ -15,7 +15,7 @@
           </div>
           <div class="form-group">
             <label>Nha cung cap</label>
-            <input class="form-control" />
+            <select id="cmb-suppliers" class="form-control"></select>
           </div>
         </div>
         <div class="col-lg-6">
