--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/ImportBillManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/ImportBillManagement.cshtml
@@ -6,6 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
+<div id="import-bill-insert-form"></div>
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
@@ -39,6 +40,7 @@
                   <td>@importBill.Promotion</td>
                   <td>@(new ImportBillDao().Supplier(importBill.SupplierId).Name)</td>
                   <td>@(new ImportBillDao().Employee(importBill.EmployeeId).Name)</td>
+
                 </tr>
               }
             }
@@ -48,27 +50,32 @@
     </div>
   </div>
 </div><!--/.row-->
-<div id="import-bill-insert-form" style="position: fixed; top: 200px; left: 20%; bottom: 120px; z-index: 2;overflow-y:scroll;overflow-x:hidden;"></div>
 @section scripts
 {
   <script src="~/Scripts/pages/import-bill-management.js"></script>
   <script>
-    $("#import-bill-insert-form").hide();
-    $("#btn-import-bill-insert-form-open").click(function () {
-      $.ajax({
-        url: "/ImportBill/ImportBillInsertForm",
-        success: function (data) {
-          $("#import-bill-insert-form").html(data);
-        }
-      }).done(function () {
-        $("#import-bill-insert-form").slideDown(500);
-        $("#btn-import-bill-insert-form-open").hide();
-      });
+    $.ajax({
+      url: "/ImportBill/ImportBillInsertForm",
+      success: function(data) {
+        $("#import-bill-insert-form").html(data);
+      }
     });
-    function done() {
-      $("#product-insert-form")[0].reset();
-      validator.resetForm();
-    }
+//    $("#import-bill-insert-form").hide();
+//    $("#btn-import-bill-insert-form-open").click(function () {
+//      $.ajax({
+//        url: "/ImportBill/ImportBillInsertForm",
+//        success: function (data) {
+//          $("#import-bill-insert-form").html(data);
+//        }
+//      }).done(function () {
+//        $("#import-bill-insert-form").slideDown(500);
+//        $("#btn-import-bill-insert-form-open").hide();
+//      });
+//    });
+//    function done() {
+//      $("#product-insert-form")[0].reset();
+//      validator.resetForm();
+//    }
   </script>
 }
 
