Dang chinh lai product. cai ham productsinwarehouse trong warehousescontroller ay

--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/_ProductInsert.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/_ProductInsert.cshtml
@@ -1,8 +1,8 @@
 ﻿<!--input-form-->
 @model AutoAncillariesLimited.Models.View_Models.ProductViewModel
-<div class="panel panel-default" id="action-product-form" style="border: 1px solid #30a5ff;">
+<div class="panel panel-info" id="insert-product-form">
   <div class="panel-heading">
-    Category Add New
+    New product:
     <button id="btn-product-insert-form-close" class="btn btn-primary pull-right">
       <span class="glyphicon glyphicon-remove" style="margin: 0"></span>
     </button>
