--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
@@ -1,57 +1,156 @@
 ﻿@{
-  ViewBag.Title = "Index";
+  ViewBag.Title = "Product Management";
   Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
 <h2>@ViewBag.Title</h2>
-
+<div class="row" id="area-product-form"></div>
 <div class="row">
-  <div class="col-lg-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Category List
-        <button class="btn btn-primary pull-right" id="btn-product-insert-form-open">
-          <span class="glyphicon glyphicon-plus" style="margin: 0"></span>
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <div class="col-lg-3 pull-left">
+        <button class="btn btn-primary" id="btn-product-add-form-open">
+          <span class="glyphicon-plus glyphicon no-margin"></span>
         </button>
       </div>
-      <div class="panel-body table-responsive">
-        <table id="table-products" class="table table-striped table-hover display nowrap">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Product name</th>
-              <th>Inventory</th>
-              <th>Price</th>
-              <th>Description</th>
-              <th>Options</th>
-            </tr>
-          </thead>
-        </table>
+      <div class="col-lg-3 pull-right">
+        <select id="cmb-warehouse-id" class="form-control" style="margin-top: 5px;">
+          <option value="-1">All warehouses</option>
+          @if (ViewBag.Warehouses.Count > 0)
+          {
+            foreach (var warehouse in ViewBag.Warehouses)
+            {
+              <option value="@warehouse.Id">
+                @warehouse.Name
+              </option>
+            }
+          }
+        </select>
       </div>
     </div>
+    <div class="panel-body">
+      <table id="products-table" class="table table-responsive">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Product name</th>
+            <th>Inventory</th>
+            <th>Price</th>
+            <th></th>
+          </tr>
+        </thead>
+      </table>
+    </div>
   </div>
-</div><!--/.row-->
-<div id="product-form-area">
-
 </div>
+
 @section scripts
 {
-  <script src="~/Scripts/pages/product-management.js"></script>
   <script>
-    
-    function done() {
-      $("#product-insert-form")[0].reset();
-      validator.resetForm();
+    var areaProductForm = $("#area-product-form");
+    areaProductForm.hide();
+    var productsTable;
+    var detailRows = [];
+    var cmbWarehouses = $("#cmb-warehouse-id");
+    cmbWarehouses.change(function () {
+      productsTable.destroy();
+      var config = productsTableConfig(parseInt($(this).val()));
+      productsTable = $("#products-table").DataTable(config);
+    });
+    $("#products-table").on("click",
+      ".btn-product-expand",
+      function () {
+        // Lấy thẻ 'tr' bao button $(this)
+        var tr = $(this).closest('tr');
+        // lấy dòng trong table
+        var row = productsTable.row(tr);
+        var span = $(this).find('span');
+        var idx = $.inArray(tr.attr("id"), detailRows);
+        if (row.child.isShown()) {
+          tr.removeClass("details");
+          row.child.hide();
+          span.addClass('glyphicon-menu-down');
+          span.removeClass('glyphicon-menu-up');
+          // Remove from the 'open' array
+          detailRows.splice(idx, 1);
+        } else {
+          tr.addClass("details");
+          row.child(fillProductsTableRowData(row.data())).show();
+          span.addClass('glyphicon-menu-up');
+          span.removeClass('glyphicon-menu-down');
+          // Add to the 'open' array
+          if (idx === -1) {
+            detailRows.push(tr.attr("id"));
+          }
+        }
+      });
+    productsTable = $("#products-table").DataTable(productsTableConfig(-1));
+    function productsTableConfig(val) {
+      var config = {};
+      config.dom = '<"toolbar">frtip';
+      config.scrollX = false;
+      config.columnDefs = [
+        {
+          "class": "text-center",
+          "width": "10%",
+          "sortable": false,
+          "searchable": false,
+          "targets": 4,
+          "defaultContent": '<button class="btn btn-default btn-product-expand">' +
+            '<span class="glyphicon glyphicon-menu-down"/></button> ' +
+            '<button class="btn btn-default btn-product-update">' +
+            '<span class="glyphicon glyphicon-pencil"/></button>'
+        },
+        {
+          "width": "4%",
+          "targets": 0,
+          "class": "text-center"
+        },
+        {
+          "targets": [2, 3],
+          "width": "8%",
+          "class": "text-center"
+        }
+      ];
+      config.columns = [
+        { data: "Id" },
+        { data: "Name" },
+        { data: "Inventory" },
+        { data: "Price" }
+      ];
+      switch (val) {
+      case -1:  
+        config.ajax = {
+          url: "/Product/Products",
+          dataSrc: ""
+        };
+        break;
+      default:
+        config.ajax = {
+          url: "/Warehouses/ProductsInWarehouse",
+          data: { id: val },
+          dataSrc: ""
+        };
+        break;
+      }
+      return config;
     }
+
+    function fillProductsTableRowData(data) {
+      return '<label style="color:red;">Product category: ' + data.Category.Name + '</label><br/>' +
+        '<label style="color: red">Description:</label><br/><span style="font-size: 12px; color: black;">' + data.Description + '</span>';
+    }
+
+    $("#btn-product-add-form-open").click(function() {
+      $.ajax({
+        url: "/Product/ProductInsertForm",
+        contentType: "text/html",
+        success: function(data) {
+          areaProductForm.html(data);
+        }
+      }).done(function() {
+        areaProductForm.slideDown();
+      });
+    });
   </script>
 }
-
-<style>
-  #product-form-area {
-    width: 40%;
-    z-index: 2;
-    position: fixed;
-    top: 150px;
-    left: 37%;
-  }
-</style>
