--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_SidebarLayout.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_SidebarLayout.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
+﻿<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar" style="border-right: 1px green solid;">
   <form role="search">
     <div class="form-group">
       <input type="text" class="form-control" placeholder="Search">
